Core2: Tweaks to several features

--- a/core2/pkg/foundation/auth_redirect.html
+++ b/core2/pkg/foundation/auth_redirect.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <p>Please click <a href='%s'>here</a> if your browser does not redirect you automatically</p>
+<script>
+    localStorage.setItem("authState", "%s");
+</script>
 </body>
 </html>
